--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
       retries: 5
     volumes:
       - postgres_volume:/var/lib/postgresql/data/
-      - ./dump/schema.sql:/docker-entrypoint-initdb.d/init.sql
+      # - ./dump/schema.sql:/docker-entrypoint-initdb.d/init.sql
     env_file:
       - ./.env
     environment:
